업데이트 : 소셜로그인 로직 구현. 구글/페이스북/카카오톡 완료, 네이버는 도메인 호스팅 이후 진행.

--- a/StudySiba/src/main/webapp/WEB-INF/web.xml
+++ b/StudySiba/src/main/webapp/WEB-INF/web.xml
@@ -45,10 +45,10 @@
 	</filter-mapping>
 	
 	
-	<error-page>
+	<!-- <error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/views/common/error404.jsp</location>
-    </error-page>
+    </error-page> -->
     
     <error-page>
         <error-code>500</error-code>
