--- a/StudySiba/src/main/webapp/WEB-INF/web.xml
+++ b/StudySiba/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,10 @@
 	<!-- The definition of the Root Spring Container shared by all Servlets and Filters -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/spring/root-context.xml</param-value>
+		<param-value>
+			/WEB-INF/spring/root-context.xml
+			/WEB-INF/spring/spring-security.xml
+		</param-value>
 	</context-param>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
@@ -45,10 +48,10 @@
 	</filter-mapping>
 	
 	
-	<!-- <error-page>
+	<error-page>
         <error-code>404</error-code>
         <location>/WEB-INF/views/common/error404.jsp</location>
-    </error-page> -->
+    </error-page>
     
     <error-page>
         <error-code>500</error-code>
